2019-1/230/users/4032/executions/1641_1802.log
== TEST (2019-04-05 23:07:34) 
-- CODE:
import math
pontosVida = float(input("Pontos de vida: "))
dado1 = int(input("Valor de 0 a 20 sorteado? "))
dado2 = int(input("Valor de 0 a 20 sorteado? "))
dano = (math.sqrt(5 * dado1) + math.pi**(dado2 / 3)
-- ERROR:
File "XXXX", line 6
    
                                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:07:53) 
-- CODE:
import math
pontosVida = float(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = (math.sqrt(5 * dado1) + math.pi**(dado2 / 3)
-- ERROR:
File "XXXX", line 6
    
                                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:08:40) 
-- CODE:
import math
pontosVida = float(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = (math.sqrt(5 * dado1) + math.pi**(dado2 / 3))
-- ERROR:
File "XXXX", line 6
    
                                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:09:24) 
-- CODE:
import math
pontosVida = float(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = (math.sqrt(5 * dado1) + math.pi**(dado2 / 3))
print(int(dano))
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 23:10:04) 
-- CODE:
import math
pontosVida = float(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = ((math.sqrt(5 * dado1)) + math.pi**(dado2 / 3))
print(int(dano))
-- EXECUTION TIME:
0.263269
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
12
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
15
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 23:10:53) 
-- CODE:
import math
pontosVida = float(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = int(((math.sqrt(5 * dado1)) + math.pi**(dado2 / 3)))
print(dano)
-- EXECUTION TIME:
0.200321
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
12
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
15
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:11:11) 
-- CODE:
import math
pontosVida = float(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = int((math.sqrt(5 * dado1) + math.pi**(dado2 / 3)))
print(dano)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 23:12:03) 
-- CODE:
import math
pontosVida = float(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = int(math.sqrt(5 * dado1) + math.pi**(dado2 / 3))
print(dano)
-- EXECUTION TIME:
0.190208
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
12
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
15
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:12:26) 
-- CODE:
import math
pontosVida = float(input("Pontos de vida: "))
dado1 = float(input("Valor sorteado? "))
dado2 = float(input("Valor sorteado? "))
dano = int(math.sqrt(5 * dado1) + math.pi**(dado2 / 3))
print(dano)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 23:13:07) 
-- CODE:
import math
pontosVida = float(input("Pontos de vida: "))
dado1 = float(input("Valor sorteado? "))
dado2 = float(input("Valor sorteado? "))
dano = math.int(math.sqrt(5 * dado1) + math.pi**(dado2 / 3))
print(dano)
-- EXECUTION TIME:
0.136628
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1641/1802/main.py", line 5, in <module>
    dano = math.int(math.sqrt(5 * dado1) + math.pi**(dado2 / 3))
AttributeError: 'module' object has no attribute 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 23:13:41) 
-- CODE:
import math
pontosVida = int(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = math.int(math.sqrt(5 * dado1) + math.pi**(dado2 / 3))
print(dano)
-- EXECUTION TIME:
0.199517
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1641/1802/main.py", line 5, in <module>
    dano = math.int(math.sqrt(5 * dado1) + math.pi**(dado2 / 3))
AttributeError: 'module' object has no attribute 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 23:15:06) 
-- CODE:
import math
pontosVida = int(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = math.int(math.sqrt(5 * dado1) + math.pi**(dado2 / 3))
restante = pontosVida - dano
print(restante)
-- EXECUTION TIME:
0.138785
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1641/1802/main.py", line 5, in <module>
    dano = math.int(math.sqrt(5 * dado1) + math.pi**(dado2 / 3))
AttributeError: 'module' object has no attribute 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:16:27) 
-- CODE:
import math
pontosVida = int(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = math.int(math.sqrt(5 * dado1) + math.pi**dado2 / 3)
restante = pontosVida - dano
print(restante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = math.int(math.sqrt(5 * dado1) + math.pi**dado2 / 3)
AttributeError: module 'math' has no attribute 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:17:20) 
-- CODE:
import math
pontosVida = int(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = math.int(math.sqrt(5 * dado1) + math.pi**dado2/3)
restante = pontosVida - dano
print(restante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = math.int(math.sqrt(5 * dado1) + math.pi**dado2/3)
AttributeError: module 'math' has no attribute 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:17:45) 
-- CODE:
import math
pontosVida = float(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = math.int(math.sqrt(5 * dado1) + math.pi**dado2/3)
restante = pontosVida - dano
print(restante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = math.int(math.sqrt(5 * dado1) + math.pi**dado2/3)
AttributeError: module 'math' has no attribute 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:18:04) 
-- CODE:
import math
pontosVida = float(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = math.int(math.sqrt(5 * dado1) + math.pi**dado2/3)
restante = pontosVida - dano
print(restante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = math.int(math.sqrt(5 * dado1) + math.pi**dado2/3)
AttributeError: module 'math' has no attribute 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:19:00) 
-- CODE:
import math
pontosVida = float(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = math.int((math.sqrt(5*dado1) + math.pi**dado2/3))
restante = pontosVida - dano
print(restante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = math.int((math.sqrt(5*dado1) + math.pi**dado2/3))
AttributeError: module 'math' has no attribute 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:20:06) 
-- CODE:
import math
pontosVida = int(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = math.int((math.sqrt(5*dado1) + math.pi**(dado2/3)))
restante = pontosVida - dano
print(restante)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = math.int((math.sqrt(5*dado1) + math.pi**(dado2/3)))
AttributeError: module 'math' has no attribute 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 23:20:43) 
-- CODE:
import math
pontosVida = int(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = int((math.sqrt(5*dado1) + math.pi**(dado2/3)))
restante = pontosVida - dano
print(restante)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 23:20:46) 
-- CODE:
import math
pontosVida = int(input("Pontos de vida: "))
dado1 = int(input("Valor sorteado? "))
dado2 = int(input("Valor sorteado? "))
dano = int((math.sqrt(5*dado1) + math.pi**(dado2/3)))
restante = pontosVida - dano
print(restante)
-- EXECUTION TIME:
0.172336
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
